--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "b439f51d-8e5f-4c5a-b928-ed7487b09378"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
